@@ -1,6 +1,10 @@
 ver 0.0.18:
-binarytree.rightsideview
 
+binarytree.rightsideview
+tree.word_break_DFS()
+tree.word_break_BFS()
+tree.Fibonacci_numbers()
+tree.Lucas_numbers()
 
 2021-12-29
 ----------
